# CMake 最低版本要求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
ADD_COMPILE_OPTIONS(-std=c++11)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

# 项目信息
PROJECT(webServer)

ADD_SUBDIRECTORY(./config)
ADD_SUBDIRECTORY(./log)
ADD_SUBDIRECTORY(./httpcontext)
ADD_SUBDIRECTORY(./mysqlConnectionPool)
ADD_SUBDIRECTORY(./timeWheel)
ADD_SUBDIRECTORY(./src)


